test/fixtures/fixtures/type-error/scope-failure.lys.ast.desugar
|-Document(0,107)
  |-(AstCons)
    |-FunctionDirective(0,107)
      |-(AstCons)
        |-Decorators(0,0)
          <Rule0>
        |-(AstCons)
          |-NoModifier(0,0)
            <Rule0>
          |-FunDeclaration(0,107)
            |-(AstCons)
              |-NameIdentifier(4,13)
                |-Identifier=isComplex
              |-(AstCons)
                |-TypeParameters(13,13)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(13,26)
                    |-(List)(14,25)
                      |-Parameter(14,25)
                        |-(AstCons)
                          |-NameIdentifier(14,20)
                            |-Identifier=number
                          |-Reference(22,25)
                            |-QName(22,25)
                              |-NameIdentifier(22,25)
                                |-Identifier=ref
                  |-(AstCons)
                    |-ReturnType(26,36)
                      |-Reference(28,35)
                        |-QName(28,35)
                          |-NameIdentifier(28,35)
                            |-Identifier=boolean
                    |-FunctionBody(36,107)
                      |-MatchExpression(40,107)
                        |-(AstCons)
                          |-Reference(46,52)
                            |-QName(46,52)
                              |-NameIdentifier(46,52)
                                |-Identifier=number
                          |-MatchBody(53,107)
                            |-(AstCons)
                              |-CaseIs(59,85)
                                |-(AstCons)
                                  |-DeclaredName(64,66)
                                    |-NameIdentifier(64,65)
                                      |-Identifier=x
                                  |-(AstCons)
                                    |-ReferencedType(66,73)
                                      |-Reference(69,73)
                                        |-QName(69,73)
                                          |-NameIdentifier(69,73)
                                            |-Identifier=Real
                                    |-(AstCons)
                                      |-Destructure(73,77)
                                        |-NameIdentifier(74,75)
                                          |-Identifier=_
                                      |-BooleanLiteral(80,85)
                                        <Rule0>
                              |-CaseElse(90,103)
                                |-(AstCons)
                                  |-DeclaredName(95,95)
                                    <Rule0>
                                  |-BooleanLiteral(98,103)
                                    <Rule0>
    |-EndOfFile=